--- a/SSIM/index.html
+++ b/SSIM/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>church address</title>
    <link rel="stylesheet" href="style.css"> 
+   <link rel="stylesheet" href="fontawesome-free-6.1.1-web/css/all.min.css">
+   <link rel="stylesheet" href="fonts/akadora/fontinfo.txt">
    
 
 </head>
@@ -28,7 +30,7 @@
         <div class="banner-img"></div>
         <h3>we help to get things done</h3>
         <h1>God is <span>Almighty</span></h1>
-        <a href="more info" class="banner-btn"> more info</a>
+        <a href="./about.html" class="banner-btn"> more info</a>
 
     </section>
 
@@ -101,7 +103,7 @@
         <ul class="contact-content">
 
             <li>
-                <i class="fa fa-map-maker"></i>
+                <i class="fa fa-map-marker"></i>
                 <p>124. ekpoma <br> nigeria</p>
             </li>
 
